--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:low-memory": "NODE_OPTIONS='--max-old-space-size=3072' next build",
     "start": "next start",
     "lint": "next lint"
   },
